--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="icon.png" />
   <title>Soundfry - Profile Follow Button Generator</title>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css'>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+<link rel='stylesheet' href='all.min.css'>
+<link rel="stylesheet" href="bootstrap.min.css">
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -25,7 +25,7 @@
   </div>
 </div>
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.6/clipboard.min.js'></script><script src="script.js"></script>
+  <script src='clipboard.min.js'></script><script src="script.js"></script>
   <script async src="https://dl.dropboxusercontent.com/s/a64gkohkd5nmcmu/app.js" charset="utf-8"></script>
 </body>
 </html>
