--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
         <div class="card-body">
           <b>Examples:</b>
           <div class="mt-2">
-            <a href="https://soundfry.com/soundfry"><div class="sfb sfb-outline-primary"><i class="soundfry"></i> Follow</div></a>
-            <a href="https://soundfry.com/soundfry"><div class="sfb sfb-outline-primary"><i class="soundfry"></i></div></a>
-            <a href="https://soundfry.com/soundfry"><div class="sfb sfb-primary"><i class="soundfry"></i> Follow</div></a>
-            <a href="https://soundfry.com/soundfry"><div class="sfb sfb-primary"><i class="soundfry"></i></div></a>
-            <a href="https://soundfry.com/soundfry"><div class="sfb sfb-primary sfb-sm"><i class="soundfry"></i></div></a>
-            <a href="https://soundfry.com/soundfry"><div class="sfb sfb-primary sfb-lg"><i class="soundfry"></i></div></a>
-            <a href="https://soundfry.com/soundfry"><div class="sfb" style="color:black;background-color:white;border-color:black"><i class="soundfry"></i> Follow</div></a>
-            <a href="https://soundfry.com/soundfry"><div class="sfb" style="color:black;background-color:white;border-color:black"><i class="soundfry"></i></div></a>
-            <a href="https://soundfry.com/soundfry"><div class="sfb" style="color:black;background-color:cyan;border-color:black"><i class="soundfry"></i> Follow</div></a>
-            <a href="https://soundfry.com/soundfry"><div class="sfb"><i class="soundfry"></i></div></a>
+            <a href="https://soundfry.com/soundfry" target="_blank"><div class="sfb sfb-outline-primary"><i class="soundfry"></i> Follow</div></a>
+            <a href="https://soundfry.com/soundfry" target="_blank"><div class="sfb sfb-outline-primary"><i class="soundfry"></i></div></a>
+            <a href="https://soundfry.com/soundfry" target="_blank"><div class="sfb sfb-primary"><i class="soundfry"></i> Follow</div></a>
+            <a href="https://soundfry.com/soundfry" target="_blank"><div class="sfb sfb-primary"><i class="soundfry"></i></div></a>
+            <a href="https://soundfry.com/soundfry" target="_blank"><div class="sfb sfb-primary sfb-sm"><i class="soundfry"></i></div></a>
+            <a href="https://soundfry.com/soundfry" target="_blank"><div class="sfb sfb-primary sfb-lg"><i class="soundfry"></i></div></a>
+            <a href="https://soundfry.com/soundfry" target="_blank"><div class="sfb" style="color:black;background-color:white;border-color:black"><i class="soundfry"></i> Follow</div></a>
+            <a href="https://soundfry.com/soundfry" target="_blank"><div class="sfb" style="color:black;background-color:white;border-color:black"><i class="soundfry"></i></div></a>
+            <a href="https://soundfry.com/soundfry" target="_blank"><div class="sfb" style="color:black;background-color:cyan;border-color:black"><i class="soundfry"></i> Follow</div></a>
+            <a href="https://soundfry.com/soundfry" target="_blank"><div class="sfb"><i class="soundfry"></i></div></a>
           </div>
         </div>
       </div>
